tools/scanexr/tests/solidity/snapshots/main__solidity__test_solidity_ls__find_definitions-2.snap
---
source: tools/scanexr/tests/solidity/test_solidity_ls.rs
expression: snapshot
---

### input ###

contract.sol
#@#
pragma solidity ^0.8.19;

contract Contract {
    function foo() public {}

    function withdraw() public {
        address target = msg.sender;
        
        foo();
    //  ^^^ start

        (bool sent, ) = target.call{value: 1}("");
    }
}
        
### output ###
contract.sol
#@#

pragma solidity ^0.8.19;

contract Contract {
    function foo() public {}
             ^^^ Meta: ()

    function withdraw() public {
        address target = msg.sender;
        
        foo();
    //  ^^^ start

        (bool sent, ) = target.call{value: 1}("");
    }
}
        
